--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -133,6 +133,7 @@
     <color name="color_e8e8e8">#E8E8E8</color>
     <color name="color_353c41">#353C41</color>
     <color name="color_929292">#929292</color>
+    <color name="color_36bdff">#36BDFF</color>
 
 
 </resources>
