--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -134,6 +134,8 @@
     <color name="color_353c41">#353C41</color>
     <color name="color_929292">#929292</color>
     <color name="color_36bdff">#36BDFF</color>
+    <color name="color_d2d2d2">#D2D2D2</color>
+    <color name="color_f9f9f9">#F9F9F9</color>
 
 
 </resources>
