--- a/app/src/main/res/layout/fragment_home_page_list.xml
+++ b/app/src/main/res/layout/fragment_home_page_list.xml
@@ -11,7 +11,7 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rV_devices_list"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:background="@color/white" />
 
 
