--- a/app/src/main/res/layout/layout_toast_text.xml
+++ b/app/src/main/res/layout/layout_toast_text.xml
@@ -5,8 +5,7 @@
     android:layout_height="wrap_content"
     android:drawablePadding="12dp"
     android:gravity="center"
-    android:textColor="#fff"
-    android:textSize="14sp"
-    android:paddingTop="23dp"
     android:paddingBottom="23dp"
-    />
+    android:paddingTop="23dp"
+    android:textColor="@android:color/background_dark"
+    android:textSize="14sp" />
