--- a/app/src/main/res/layout/fragment_home_mine.xml
+++ b/app/src/main/res/layout/fragment_home_mine.xml
@@ -17,29 +17,29 @@
             android:background="#40000000" />
 
 
-        <com.cylan.jiafeigou.widget.roundedimageview.RoundedImageView
-            android:id="@+id/iv_home_mine_portrait"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="76dp"
-            android:src="@drawable/icon_mine_head_normal"
-            tim:riv_border_color="#03ffffff"
-            tim:riv_border_width="4dp"
-            tim:riv_oval="true" />
+        <!--<com.cylan.jiafeigou.widget.roundedimageview.RoundedImageView-->
+        <!--android:id="@+id/iv_home_mine_portrait"-->
+        <!--android:layout_width="80dp"-->
+        <!--android:layout_height="80dp"-->
+        <!--android:layout_centerHorizontal="true"-->
+        <!--android:layout_marginTop="76dp"-->
+        <!--android:src="@drawable/icon_mine_head_normal"-->
+        <!--tim:riv_border_color="#03ffffff"-->
+        <!--tim:riv_border_width="4dp"-->
+        <!--tim:riv_oval="true" />-->
 
 
-        <TextView
-            android:id="@+id/tv_home_mine_nick"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/iv_home_mine_portrait"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="16dp"
-            android:gravity="center_horizontal"
-            android:text="用户昵称"
-            android:textColor="@color/white"
-            android:textSize="19sp" />
+        <!--<TextView-->
+        <!--android:id="@+id/tv_home_mine_nick"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_below="@+id/iv_home_mine_portrait"-->
+        <!--android:layout_centerHorizontal="true"-->
+        <!--android:layout_marginTop="16dp"-->
+        <!--android:gravity="center_horizontal"-->
+        <!--android:text="用户昵称"-->
+        <!--android:textColor="@color/white"-->
+        <!--android:textSize="19sp" />-->
 
 
         <ImageView
@@ -53,10 +53,13 @@
 
     </RelativeLayout>
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_below="@+id/rLayout_home_mine_top"
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_below="@+id/rLayout_home_mine_top"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
@@ -94,7 +97,6 @@
                 tim:leftDrawable="@drawable/icon_mine_setting"
                 tim:rightDrawable="@drawable/icon_mine_arrow_next"
                 tim:text="设置" />
-
         </LinearLayout>
-
+    </ScrollView>
 </RelativeLayout>
