--- a/app/src/main/res/layout/activity_new_home.xml
+++ b/app/src/main/res/layout/activity_new_home.xml
@@ -5,6 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
+    android:clipToPadding="false"
+    android:fitsSystemWindows="true"
     android:orientation="vertical"
     tools:context="com.cylan.jiafeigou.n.NewHomeActivity">
 
@@ -25,11 +27,11 @@
 
 
     <RadioGroup
-        android:background="@color/color_f9f9f9"
         android:id="@+id/rgLayout_home_bottom_menu"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        android:background="@color/color_f9f9f9"
         android:orientation="horizontal">
 
         <RadioButton
