--- a/app/src/main/res/layout/fragment_home_mine.xml
+++ b/app/src/main/res/layout/fragment_home_mine.xml
@@ -17,29 +17,30 @@
             android:background="#40000000" />
 
 
-        <!--<com.cylan.jiafeigou.widget.roundedimageview.RoundedImageView-->
-        <!--android:id="@+id/iv_home_mine_portrait"-->
-        <!--android:layout_width="80dp"-->
-        <!--android:layout_height="80dp"-->
-        <!--android:layout_centerHorizontal="true"-->
-        <!--android:layout_marginTop="76dp"-->
-        <!--android:src="@drawable/icon_mine_head_normal"-->
-        <!--tim:riv_border_color="#03ffffff"-->
-        <!--tim:riv_border_width="4dp"-->
-        <!--tim:riv_oval="true" />-->
+        <com.cylan.jiafeigou.widget.roundedimageview.RoundedImageView
+        android:id="@+id/iv_home_mine_portrait"
+        android:layout_width="72dp"
+        android:layout_height="72dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="76dp"
+        android:src="@drawable/icon_mine_head_normal"
+        tim:riv_border_color="#03ffffff"
+        tim:riv_border_width="4dp"
+        android:elevation="10dp"
+        tim:riv_oval="true" />
 
 
-        <!--<TextView-->
-        <!--android:id="@+id/tv_home_mine_nick"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_below="@+id/iv_home_mine_portrait"-->
-        <!--android:layout_centerHorizontal="true"-->
-        <!--android:layout_marginTop="16dp"-->
-        <!--android:gravity="center_horizontal"-->
-        <!--android:text="用户昵称"-->
-        <!--android:textColor="@color/white"-->
-        <!--android:textSize="19sp" />-->
+        <TextView
+            android:id="@+id/tv_home_mine_nick"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/iv_home_mine_portrait"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="16dp"
+            android:gravity="center_horizontal"
+            android:text="用户昵称"
+            android:textColor="@color/white"
+            android:textSize="19sp" />
 
 
         <ImageView
@@ -55,8 +56,8 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_below="@+id/rLayout_home_mine_top"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/rLayout_home_mine_top">
 
         <LinearLayout
             android:layout_width="match_parent"
