--- a/app/src/main/res/layout/fragment_home_page_list_empty_view.xml
+++ b/app/src/main/res/layout/fragment_home_page_list_empty_view.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_centerHorizontal="true"
-    android:background="@color/white"
+    android:background="@color/color_white"
     android:gravity="center_horizontal"
     android:paddingTop="110dp"
     android:text="@string/ADD_EQUIPMENT"
