--- a/app/src/main/res/layout/activity_new_home.xml
+++ b/app/src/main/res/layout/activity_new_home.xml
@@ -4,7 +4,7 @@
     android:id="@+id/rLayout_new_home_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@color/color_white"
     android:orientation="vertical"
     tools:context="com.cylan.jiafeigou.n.NewHomeActivity">
 
