--- a/app/src/main/res/layout/fragment_home_page_list.xml
+++ b/app/src/main/res/layout/fragment_home_page_list.xml
@@ -12,7 +12,7 @@
             android:id="@+id/rV_devices_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/white" />
+            android:background="@color/color_white" />
 
 
     </android.support.v4.widget.SwipeRefreshLayout>
