--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -28,7 +28,7 @@
     <color name="viewfinder_mask">#60000000</color>
     <color name="viewfinder_frame">#ff000000</color>
     <color name="intput_text">#555555</color>
-    <color name="white">#ffffff</color>
+
     <color name="enable_share">#cceefc</color>
     <color name="normal_text">#adadad</color>
     <color name="blue">#00B5EB</color>
@@ -134,6 +134,7 @@
     <color name="color_353c41">#353C41</color>
     <color name="color_929292">#929292</color>
     <color name="color_36bdff">#36BDFF</color>
-
+    <color name="color_red">#FF0000</color>
+    <color name="color_white">#FFFFFF</color>
 
 </resources>
