每日精彩部分提交

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -134,6 +134,13 @@
     <color name="color_353c41">#353C41</color>
     <color name="color_929292">#929292</color>
     <color name="color_36bdff">#36BDFF</color>
+    <color name="color_0ba8cf">#0ba8cf</color>
+    <color name="color_f6f9fa">#f6f9fa</color>
+    <color name="color_888888">#888888</color>
+    <color name="color_788291">#788291</color>
+    <color name="color_4b9fd5">#4b9fd5</color>
+    <color name="color_909090">#909090</color>
+    <color name="color_666666">#666666</color>
 
 
 </resources>
