--- a/app/src/main/res/layout/fragment_home_wonderful_header.xml
+++ b/app/src/main/res/layout/fragment_home_wonderful_header.xml
@@ -21,7 +21,7 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="18dp"
             android:text="每日精彩"
-            android:textColor="@color/white"
+            android:textColor="@color/color_white"
             android:textSize="22sp" />
 
         <TextView
@@ -32,7 +32,7 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="18dp"
             android:text="在这里,发现最美的一天"
-            android:textColor="@color/white"
+            android:textColor="@color/color_white"
             android:textSize="15sp" />
     </RelativeLayout>
 
