--- a/app/src/main/res/layout/fragment_home_wonderful_header.xml
+++ b/app/src/main/res/layout/fragment_home_wonderful_header.xml
@@ -62,7 +62,7 @@
             android:layout_gravity="center"
             android:background="@drawable/btn_date_head_wondeful_selector" />
 
-        <TextView
+        <com.cylan.jiafeigou.widget.textview.WonderfulTitleHead
             android:id="@+id/tv_date_item_head_wonder"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
