--- a/app/src/main/res/layout/layout_item_picture_wonderful.xml
+++ b/app/src/main/res/layout/layout_item_picture_wonderful.xml
@@ -1,6 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/rLayout_picture_item_wonder"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="225dp"
     android:background="@color/color_white"
     android:clickable="true">
@@ -10,8 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_marginLeft="22dp"
-        android:src="@drawable/bg_longline_wonderful"
-        />
+        android:src="@drawable/bg_longline_wonderful" />
 
     <ImageView
         android:id="@+id/iv_circle"
@@ -39,8 +38,9 @@
         android:layout_height="120dp"
         android:layout_below="@id/tv_title_item_wonder"
         android:layout_marginLeft="13dp"
-        android:layout_marginRight="14dp"
+        android:layout_marginStart="13dp"
         android:layout_marginTop="14dp"
+        android:layout_toEndOf="@id/iv_longline"
         android:layout_toRightOf="@id/iv_longline"
         android:scaleType="fitXY"
         android:src="@drawable/ic_launcher" />
@@ -48,11 +48,10 @@
 
     <RelativeLayout
         android:layout_width="wrap_content"
-        android:layout_height="26dp"
+        android:layout_height="wrap_content"
         android:layout_below="@id/iv_src_item_wonder"
         android:layout_marginBottom="25dp"
         android:layout_marginLeft="30dp"
-        android:layout_marginRight="22dp"
         android:layout_marginTop="12dp"
         android:layout_toRightOf="@id/iv_longline">
 
@@ -92,27 +91,25 @@
             android:id="@+id/tv_share_item_wonder"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:src="@drawable/tv_share_item_wonderful_selector"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginLeft="252dp"
+            android:layout_marginStart="252dp"
+            android:drawableLeft="@drawable/icon_share_item_wonderful_selector"
+            android:drawablePadding="4dp"
+            android:drawableStart="@drawable/icon_share_item_wonderful_selector"
+            android:gravity="center"
             android:text="分享"
-            android:textColor="#909090"
+            android:textColor="@color/color_909090"
             android:textSize="11sp" />
-
-        <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="4dp"
-            android:layout_toLeftOf="@id/tv_share_item_wonder"
-            android:background="@drawable/icon_share_item_wonderful_selector" />
     </RelativeLayout>
+
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_toRightOf="@id/iv_longline"
         android:layout_alignParentBottom="true"
-        android:layout_marginLeft="13dp"
         android:layout_marginBottom="2dp"
-        android:background="#e8e8e8"/>
+        android:layout_marginLeft="13dp"
+        android:layout_toRightOf="@id/iv_longline"
+        android:background="#e8e8e8" />
 </RelativeLayout>
