--- a/app/src/main/res/layout/layout_home_mine_item.xml
+++ b/app/src/main/res/layout/layout_home_mine_item.xml
@@ -34,7 +34,7 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_alignParentBottom="true"
-        android:background="#e8e8e8" />
+        android:background="@color/color_f2f2f2" />
 
 
 </RelativeLayout>
