--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,8 +13,6 @@
 <resources>
 
 
-
-
     <color name="half_transparent">#aa000000</color>
     <color name="setting_line_color">#c7c7c9</color>
 
@@ -22,14 +20,24 @@
 
     <color name="color_wave_front">#33FFFFFF</color>
     <color name="color_333333">#333333</color>
+    <color name="color_444444">#444444</color>
+    <color name="color_666666">#666666</color>
     <color name="color_777777">#777777</color>
+    <color name="color_999999">#999999</color>
     <color name="color_adadad">#ADADAD</color>
     <color name="color_e8e8e8">#E8E8E8</color>
     <color name="color_353c41">#353C41</color>
     <color name="color_929292">#929292</color>
     <color name="color_36bdff">#36BDFF</color>
     <color name="color_d2d2d2">#D2D2D2</color>
+    <color name="color_d8d8d8">#D8D8D8</color>
     <color name="color_f9f9f9">#F9F9F9</color>
+    <color name="color_f2f2f2">#F2F2F2</color>
+    <color name="color_7c7c7c">#7C7C7C</color>
+    <color name="color_9e9e9e">#9E9E9E</color>
+    <color name="color_4b9fd5">#4B9FD5</color>
+    <color name="color_cecece">#CECECE</color>
+
     <!--纯色-->
     <color name="color_white">#FFFFFFFF</color>
     <color name="color_red">#FFFF0000</color>
