--- a/app/src/main/res/layout/fragment_register_by_mail_layout.xml
+++ b/app/src/main/res/layout/fragment_register_by_mail_layout.xml
@@ -35,7 +35,7 @@
 
             <EditText
                 android:id="@+id/et_register_username"
-                style="@style/login_common_cursor"
+                style="@style/login_model_common_edittext_style"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
@@ -58,11 +58,9 @@
             android:layout_height="1dp"
             android:background="@color/color_f2f2f2" />
 
-        <Button
-            android:id="@+id/btn_register_commit"
+        <TextView
+            android:id="@+id/tv_model_commit"
             style="@style/login_model_commit_style"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="37dp"
             android:text="继续" />
