--- a/app/src/main/res/layout/fragment_register_set_pwd.xml
+++ b/app/src/main/res/layout/fragment_register_set_pwd.xml
@@ -33,7 +33,7 @@
 
             <EditText
                 android:id="@+id/et_login_pwd"
-                style="@style/login_common_cursor"
+                style="@style/login_model_common_edittext_style"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
@@ -47,11 +47,11 @@
                 style="@style/clear_edittext_style"
                 android:layout_centerVertical="true"
                 android:layout_marginRight="9dp"
-                android:layout_toLeftOf="@+id/togbtn_show_pwd" />
+                android:layout_toLeftOf="@+id/cb_show_pwd" />
 
 
-            <ToggleButton
-                android:id="@+id/togbtn_show_pwd"
+            <CheckBox
+                android:id="@+id/cb_show_pwd"
                 style="@style/show_pwd_style"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true" />
@@ -63,11 +63,9 @@
             android:layout_height="1dp"
             android:background="@color/color_f2f2f2" />
 
-        <Button
-            android:id="@+id/btn_register_commit"
+        <TextView
+            android:id="@+id/tv_model_commit"
             style="@style/login_model_commit_style"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="37dp"
             android:text="完成" />
