--- a/app/src/main/res/anim/slide_down_out.xml
+++ b/app/src/main/res/anim/slide_down_out.xml
@@ -2,5 +2,6 @@
 <set android:interpolator="@android:anim/accelerate_interpolator"
 	xmlns:android="http://schemas.android.com/apk/res/android">
 	<translate android:duration="300"
-		android:fromYDelta="0.0" android:toYDelta="100.0%p" />
+		android:fromYDelta="0.0"
+		android:toYDelta="100.0%p" />
 </set>
