--- a/app/src/main/res/anim/slide_in_down.xml
+++ b/app/src/main/res/anim/slide_in_down.xml
@@ -5,5 +5,5 @@
     <translate
         android:fromYDelta="0"
         android:toYDelta="100%p"
-        android:duration="@android:integer/config_shortAnimTime" />
+        android:duration="200" />
 </set>
