--- a/app/src/main/res/anim/slide_out_left.xml
+++ b/app/src/main/res/anim/slide_out_left.xml
@@ -2,7 +2,7 @@
 <set xmlns:android="http://schemas.android.com/apk/res/android"
     android:interpolator="@android:anim/accelerate_interpolator">
     <translate
-        android:duration="1000"
-        android:fromXDelta="100%p"
-        android:toXDelta="0" />
+        android:duration="200"
+        android:fromXDelta="0"
+        android:toXDelta="-100%p" />
 </set>
