--- a/app/src/main/res/layout/layout_login_top_item.xml
+++ b/app/src/main/res/layout/layout_login_top_item.xml
@@ -27,6 +27,7 @@
         android:id="@+id/tv_login_top_right"
         style="@style/text_base_singleLine"
         android:layout_width="wrap_content"
+        android:text="登陆"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
